# Fallout-4-Discord-Rich-Presence

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  BUILD_NOTES.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  llms.txt  vcpkg.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: DIAGNOSIS.md  LESSONS-LEARNED.md  configuration.md  discord-app-setup.md  index.md
installer/fomod/: ModuleConfig.xml  info.xml
scripts/: build.ps1
src/: Constants.h
src/Config/: Settings.cpp  Settings.h  Translation.cpp  Translation.h
src/Discord/: Client.cpp  Client.h  Pipe.cpp  Pipe.h  Protocol.cpp  Protocol.h  RateLimiter.cpp  RateLimiter.h
src/Game/: CombatTracker.cpp  CombatTracker.h  Diagnostics.cpp  Diagnostics.h  EventTracker.cpp  EventTracker.h  GameState.h  Location.cpp  Location.h  MainThread.cpp  MainThread.h  MainUpdateHook.cpp  MainUpdateHook.h  MenuCatalog.h  MenuTracker.cpp  MenuTracker.h  NgIds.h  PlayerAccess.cpp  PlayerAccess.h  PlayerSnapshot.cpp  PlayerSnapshot.h  UiResolver.cpp  UiResolver.h
src/Mapper/: Mapper.cpp  Mapper.h
src/Plugin/: ConflictCheck.cpp  ConflictCheck.h  Main.cpp
src/Presence/: Composer.cpp  Composer.h  PresenceConfig.cpp  PresenceConfig.h  Template.cpp  Template.h
src/Util/: Hash.h  Logger.cpp  Logger.h  PlayTime.cpp  PlayTime.h
tests/: CMakeLists.txt  index.md
tests/contract/: test_frames.cpp
tests/contract/frames/: handshake.json  set_activity_min.json
tests/integration/: test_pipe.cpp
tests/unit/: test_composer.cpp  test_dispatch.cpp  test_hash.cpp  test_mapper.cpp  test_menucatalog.cpp  test_playtime.cpp  test_presenceconfig.cpp  test_protocol.cpp  test_ratelimiter.cpp  test_settings.cpp  test_template.cpp  test_translation.cpp
tools/: build-banner.py  build-discord-assets.py  build-flat-ng-debug.bat  build-flat-ng-release.bat  configure-flat-ng-debug.bat  ctest-flat-ng-debug.bat  finalize-assets.py  patch-commonlibf4.bat  verify-rel-ids.ps1
tools/re/: confirm.py  find_anim_sound_update.py  find_g_ui_store.py  find_getmenu.py  find_ui_singleton.py  find_vtable.py  pe.py
